-
Bug
-
Resolution: Done
-
P2: Important
-
6.4.1
-
f8006c960e (qt/qtdeclarative/dev) f8006c960e (qt/tqtc-qtdeclarative/dev)
Similar to QTBUG-104573 or maybe it is still the same issue, but this:
MessageDialog {
buttons:MessageDialog.Ok
}
causes:
Warning: main.qml:18:31: Property "Ok" not found on type "QQuickMessageDialog"
buttons:MessageDialog.Ok
^^
- is duplicated by
-
QTBUG-100927 MessageDialog button enum is not exposed in a way that qmllint approves
-
- Closed
-
| For Gerrit Dashboard: QTBUG-108630 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 444131,4 | Register enum correctly in QQuickMessageDialog | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |