Register enum correctly in QQuickMessageDialog

Remove the broken Q_FLAG(QPlatformDialogHelper::StandardButtons) and
replace it with QML_EXTENDED_NAMESPACE(QPlatformDialogHelper) such that
the StandardButtons enum can be accessed from the qml MessageDialog type.

Fixes: QTBUG-108630
Change-Id: Ia77d7d775491db90d3e5694f784bdc811d4f6bbd
Reviewed-by: Oliver Eftevaag <oliver.eftevaag@qt.io>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
Reviewed-by: Semih Yavuz <semih.yavuz@qt.io>