tests/auto/qml/qmllint/data/qtquickdialog.qml
@@ -1,0 +1,5 @@
+import QtQuick.Dialogs
+
+MessageDialog {
+    buttons:MessageDialog.Ok
+ }
